--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -1,15 +1,7 @@
 baseURL: 'http://example.org/'
 languageCode: en-us
-title: Hugo-mod- example site
+title: Hugo-mod-resource example site
 
 module:
   imports:
-    - path: github.com/bowman2001/hugo-mod-
-
-markup:
-  goldmark:
-    parser:
-      attribute:
-        block: true
-  highlight:
-    style: monokailight
+    - path: github.com/bowman2001/hugo-mod-error-message
