--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,6 @@
 module:
   hugoVersion:
-    min: v0.111.3
+    min: v0.114.0
     extended: false
+  imports:
+    - path: github.com/bowman2001/hugo-mod-error-message
